--- a/mastodon/keda-scaledobject-sidekiq-worker-ingress.yaml
+++ b/mastodon/keda-scaledobject-sidekiq-worker-ingress.yaml
@@ -20,7 +20,7 @@ spec:
       metadata:
         serverAddress: http://prometheus-server.monitoring.svc.cluster.local
         metricName: queue_latency
-        query: sum(mastodon_sidekiq_queue_latency{queue="ingress"} * scalar(kube_deployment_status_replicas{deployment="mastodon-sidekiq-ingress"}))
+        query: sum(mastodon_sidekiq_queue_latency{queue="ingress"} * scalar(avg(kube_deployment_status_replicas{deployment="mastodon-sidekiq-ingress"})))
         threshold: '5'
         ignoreNullValues: "false"
   advanced:
