disable pruning of non-owned items

--- a/argocd/applications/mastodon.yaml
+++ b/argocd/applications/mastodon.yaml
@@ -16,6 +16,6 @@ items:
       targetRevision: main
     syncPolicy:
      automated:
-       prune: true
+       # prune: true
        selfHeal: true
 kind: List
