also change the kustomize reference

--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   - applications/ingress-nginx.yaml
   - applications/keda.yaml
   - applications/kube-state-metrics.yaml
-  - applications/mastodon.yaml
+  - applications/tootcommunity.yaml
   - applications/metrics-server.yaml
   - applications/prometheus-statsd-exporter.yaml
   - applications/argocd.yaml
