upgrade argocd to 2.5.4, set self-heal to true for mastodon

--- a/argocd/applications/tootcommunity.yaml
+++ b/argocd/applications/tootcommunity.yaml
@@ -8,6 +8,9 @@ spec:
     namespace: tootcommunity
     server: https://kubernetes.default.svc
   project: mastodon
+  syncPolicy:
+    automated:
+      selfHeal: true
   source:
     helm:
       valueFiles:
