pick the right path for allocating resources for workers

--- a/mastodon-chart/templates/deployment-sidekiq.yaml
+++ b/mastodon-chart/templates/deployment-sidekiq.yaml
@@ -54,7 +54,7 @@ spec:
           imagePullPolicy: {{ $context.Values.image.pullPolicy }}
           name: mastodon
           resources:
-            {{- toYaml $context.Values.sidekiq.resources | nindent 12 }}
+            {{- toYaml .resources | nindent 12 }}
           securityContext:
             {{- toYaml $context.Values.securityContext | nindent 12 }}
       restartPolicy: Always
