do a slower scale down when the latency is low

--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -288,7 +288,11 @@ keda:
       horizontalPodAutoscalerConfig:
         behavior:
           scaleDown:
-            stabilizationWindowSeconds: 900
+            stabilizationWindowSeconds: 300
+            policies:
+              - type: Pods
+                value: 1
+                periodSeconds: 60
           scaleUp:
             stabilizationWindowSeconds: 30
             policies:
