--- a/mastodon-chart/values.test.yaml
+++ b/mastodon-chart/values.test.yaml
@@ -4,6 +4,7 @@ configuration:
     user: mastodon-test
   localDomain: test.toot.community
   redis:
+    host: redis-haproxy.haproxy.svc.cluster.local
     database: 5
   s3:
     aliasHost: test-files.toot.community/static
@@ -12,8 +13,6 @@ configuration:
 
 web:
   domain: test.toot.community
-  concurrency: 1
-  maxThreads: 5
   resources:
     requests:
       cpu: 1m
