--- a/mastodon-chart/templates/vpa-streaming.yaml
+++ b/mastodon-chart/templates/vpa-streaming.yaml
@@ -2,7 +2,8 @@ apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
   name: {{ include "mastodon.fullname" . }}-streaming
-  {{- include "mastodon.labels" . | nindent 4 }}
+  labels:
+    {{- include "mastodon.labels" . | nindent 4 }}
 spec:
   targetRef:
     apiVersion: "apps/v1"
