remove resources, add auto mode on vpa

--- a/mastodon-chart/templates/vpa-sidekiq.yaml
+++ b/mastodon-chart/templates/vpa-sidekiq.yaml
@@ -13,5 +13,5 @@ spec:
     kind:       Deployment
     name:       {{ include "mastodon.fullname" $context }}-sidekiq-{{ .name }}
   updatePolicy:
-    updateMode: "Off"
+    updateMode: "Auto"
 {{- end }}
