tweaking some values to fit the new resource allocations

--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -169,6 +169,9 @@ jobs:
     enabled: true
     schedule: "0 5 * * *"
     days: 7
+    resources:
+      requests:
+        cpu: 1000m
   psqlBackup:
     enabled: true
     schedule: "0 1 * * *"
@@ -229,19 +232,14 @@ keda:
     pollingInterval: 15
     fallback:
       enabled: true
-      replicas: 6
+      replicas: 5
       failureThreshold: 4 # allows prometheus to be down for (4 * 15) seconds before going to fallback
     ignoreNullValues: false
     threshold: 25 # 25/sec/pod
-    advanced:
-      horizontalPodAutoscalerConfig:
-        behavior:
-          scaleDown:
-            stabilizationWindowSeconds: 600
   workers:
     enabled: true
     cooldownPeriod: 300
-    maxReplicaCount: 10
+    maxReplicaCount: 5
     minReplicaCount: 1
     pollingInterval: 10
     ignoreNullValues: false
