tweaking some values to fit the new resource allocations

--- a/mastodon-chart/templates/vpa-sidekiq.yaml
+++ b/mastodon-chart/templates/vpa-sidekiq.yaml
@@ -14,4 +14,5 @@ spec:
     name:       {{ include "mastodon.fullname" $context }}-sidekiq-{{ .name }}
   updatePolicy:
     updateMode: "Auto"
+    minReplicas: 1
 {{- end }}
