--- a/mastodon-chart/templates/deployment-sidekiq.yaml
+++ b/mastodon-chart/templates/deployment-sidekiq.yaml
@@ -31,6 +31,9 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if gt (.replicaCount | default 0) 0 }}
+      replicas: {{ .replicaCount }}
+      {{- end }}
       containers:
         - command:
             - bundle
