add secret to relay ns

--- a/argocd/configuration/1p-secrets.yaml
+++ b/argocd/configuration/1p-secrets.yaml
@@ -24,6 +24,18 @@ spec:
 ---
 # Creates a secret with the name: 1p-cf-origin-certificate-tls
 # Contents:
+# - tls.crt: <content>
+# - tls.key: <content>
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: cf-origin-certificate-tls
+  namespace: relay
+spec:
+  itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/hpm4njgmdollluy5b4isc2zpgq"
+---
+# Creates a secret with the name: 1p-cf-origin-certificate-tls
+# Contents:
 # - client_id: <content>
 # - client_secret: <content>
 apiVersion: onepassword.com/v1
