cap the upper limit of the vpa recommender

--- a/mastodon-chart/templates/vpa-sidekiq.yaml
+++ b/mastodon-chart/templates/vpa-sidekiq.yaml
@@ -15,4 +15,9 @@ spec:
   updatePolicy:
     updateMode: "Auto"
     minReplicas: 1
+  resourcePolicy:
+    containerPolicies:
+      - containerName: '*'
+        maxAllowed:
+          cpu: '1.5'
 {{- end }}
