--- a/mastodon-chart/templates/deployment-web.yaml
+++ b/mastodon-chart/templates/deployment-web.yaml
@@ -53,6 +53,8 @@ spec:
             {{- toYaml .Values.web.readinessProbe | nindent 12 }}
           startupProbe:
             {{- toYaml .Values.web.startupProbe | nindent 12 }}
+          resources:
+            {{- toYaml .Values.web.resources | nindent 12 }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
       restartPolicy: Always
