--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -138,71 +138,54 @@ sidekiq:
       operator: Equal
       value: sidekiq
   workers:
-    - name: generic
-      concurrency: 25
-      replicaCount: 4
-      queues:
-        - default
-        - ingress
-        - push
-        - pull
-      resources:
-        requests:
-          cpu: 750m
-          memory: 750Mi
-    - name: single-default
+    - name: default
       concurrency: 25
       queues:
         - default
-        - ingress
-        - push
-        - pull
       resources:
         requests:
-          cpu: 250m
-          memory: 500Mi
-    - name: single-push
-      concurrency: 25
-      queues:
-        - push
-        - default
-        - ingress
-        - pull
-      resources:
-        requests:
-          cpu: 250m
-          memory: 500Mi
-    - name: single-pull
-      concurrency: 25
-      queues:
-        - pull
-        - default
-        - ingress
-        - push
-      resources:
-        requests:
-          cpu: 250m
-          memory: 500Mi
-    - name: single-ingress
+          cpu: 500m
+          memory: 350Mi
+    - name: ingress
       concurrency: 25
       queues:
         - ingress
-        - default
-        - push
+      resources:
+        requests:
+          cpu: 500m
+          memory: 350Mi
+    - name: pull
+      concurrency: 25
+      queues:
         - pull
       resources:
         requests:
-          cpu: 250m
-          memory: 500Mi
-    - name: lowpriority
-      concurrency: 10
+          cpu: 500m
+          memory: 350Mi
+    - name: push
+      concurrency: 25
       queues:
-        - scheduler
+        - push
+      resources:
+        requests:
+          cpu: 500m
+          memory: 350Mi
+    - name: mailers
+      concurrency: 5
+      queues:
         - mailers
       resources:
         requests:
           cpu: 100m
-          memory: 300Mi
+          memory: 100Mi
+    - name: scheduler
+      concurrency: 5
+      queues:
+        - scheduler
+      resources:
+        requests:
+          cpu: 100m
+          memory: 100Mi
 
 ingress:
   ingressClassName: nginx
@@ -293,6 +276,8 @@ keda:
   workers:
     enabled: true
     cooldownPeriod: 300
+    maxReplicaCount: 10
+    minReplicaCount: 1
     pollingInterval: 10
     ignoreNullValues: false
     fallback:
@@ -302,30 +287,24 @@ keda:
     advanced:
       horizontalPodAutoscalerConfig:
         behavior:
-          scaleUp:
-            stabilizationWindowSeconds: 180
+          scaleDown:
+            stabilizationWindowSeconds: 300
             policies:
               - type: Pods
                 value: 1
-                periodSeconds: 180
+                periodSeconds: 60
+          scaleUp:
+            stabilizationWindowSeconds: 30
+            policies:
+              - type: Pods
+                value: 1
+                periodSeconds: 30
     queues:
-      - name: single-default
-        queue: default
+      - name: default
         threshold: 5
-        minReplicaCount: 0
-        maxReplicaCount: 5
-      - name: single-ingress
-        queue: ingress
+      - name: ingress
         threshold: 5
-        minReplicaCount: 0
-        maxReplicaCount: 5
-      - name: single-pull
-        queue: pull
+      - name: pull
+        threshold: 300
+      - name: push
         threshold: 5
-        minReplicaCount: 0
-        maxReplicaCount: 5
-      - name: single-push
-        queue: push
-        threshold: 5
-        minReplicaCount: 0
-        maxReplicaCount: 5
