--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - projects/infrastructure.yaml
   - projects/monitoring.yaml
   - projects/libretranslate.yaml
+  - projects/relay.yaml
   - applications/grafana.yaml
   - applications/prometheus.yaml
   - applications/ingress-nginx.yaml
@@ -19,6 +20,7 @@ resources:
   - applications/argocd.yaml
   - applications/libretranslate.yaml
   - applications/redis.yaml
+  - applications/relay.yaml
 
   # this line below is enabled because toot.community uses 1Password to provision secrets to the Kubernetes cluster,
   # it's fine if you don't, but then remove this line & the corresponding file.
