--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
   - applications/argocd.yaml
   - applications/libretranslate.yaml
   - applications/redis.yaml
+  - applications/velero.yaml
 
   # this line below is enabled because toot.community uses 1Password to provision secrets to the Kubernetes cluster,
   # it's fine if you don't, but then remove this line & the corresponding file.
