--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - applications/redis.yaml
   - applications/velero.yaml
   - applications/relay.yaml
+  - applications/backup-policy.yaml
 
   # this line below is enabled because toot.community uses 1Password to provision secrets to the Kubernetes cluster,
   # it's fine if you don't, but then remove this line & the corresponding file.
