exclude generated backups from sync list

--- a/argocd/configuration/configmap-cm.yaml
+++ b/argocd/configuration/configmap-cm.yaml
@@ -12,6 +12,12 @@ data:
         - CiliumIdentity
       clusters:
         - "*"
+    - apiGroups:
+        - velero.io
+      kinds:
+        - Backup
+      clusters:
+        - "*"
   dex.config: |
     connectors:
       - type: github
