--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -289,6 +289,8 @@ keda:
               - type: Percent
                 value: 25
                 periodSeconds: 60
+          scaleUp:
+            stabilizationWindowSeconds: 60
   workers:
     enabled: true
     cooldownPeriod: 300
